style.css
/* ... */
.footer__item {
  cursor: pointer;
  margin-left: 20px;
  margin-right: 20px;
  text-align: center;
}


/* jacobsayono copyright 2022*/
.footer__nav h2 {
  text-transform: none;
  font-size: 1rem;
  margin-bottom: 0px;
}

.to-top {
  margin-right: 0px;
  margin-bottom: 0px;
}

.to-top a {
  text-decoration: none;
  color: black;
}











/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/







/* TABLET SCREEN */
/* 768px */
@media screen and (min-width: 768px) {
  .header__container {
    min-width: 600px;
  }

  header {
    padding-bottom: 4rem;
  }
  .navbar {
    width: 100%;
    display: flex;
    bottom: 0;
    justify-content: space-between;
    padding-left: 1rem;
    padding-bottom: 60px;
  }

  .navbar ul {
    display: flex;
    flex-direction: row;
  }

  .navbar__ul a {
    text-decoration: none;
    color: black;
    font-size: 20px;
    font-weight: 400;
  }

  .navbar__ul li {
    padding: 5px 15px 15px 10px;
    background-color: transparent;
  }





  /* about me section */
  .header__container {
    padding-top: 10rem;
    padding-bottom: 16rem;
    display: flex;
    flex-direction: row-reverse;
    margin-bottom: 15px;
    align-items: center;
    justify-content: center;
    max-width: 85%;
  }

  .header__container img {
    max-width: 300px;
  }

  .header__text {
    text-align: left;
    padding-left: 4rem; /* separation between image and about me text*/
    font-size: 40px;
    margin-top: 1rem;
    line-height: 3.5rem;
  }

  /* Portfolio section at 768----------- */
  .portfolio__container {
    flex-direction: row;
    align-items: center;
    flex-wrap: wrap;
    width: 100%;
    max-width: 1165px;
  }

  .card {
    min-width: 90%;
  }

  .card img {
    margin-bottom: 1rem;
  }

  /* Skills at 768 ------------------- */

  .skills {
    width: 80%;
    text-align: center;
    margin-top: 4rem;
  }

  .skills-container {
    flex-direction: row;
    justify-content: center;
    flex-grow: 1;
    width: 100%;
    margin-bottom: 80px;
    margin-top: 30px;
  }

  .skills h2 {
    font-size: 2rem;
  }

  .skills__item {
    margin-left: 40px;
    margin-right: 40px;
  }



  
  /* Footer at 768px ---------------- */
  footer {
    display: flex;
    align-items: center;
  }

  footer p {
    max-width: 400px;
    margin-bottom: 0;
  }

  .phone,
  .email {
    margin-right: 8px;
    text-decoration: none;
  }

  .footer__nav {
    width: 95%;
  }

  .footer__nav h2 {
    font-size: 1.5rem;
  }

  .to-top {
    font-size: 1rem;
  }
}







/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/
/*----------------------------------------------------------------------*/









/* COMPUTER SCREEN */
/* min width 1024 ---------------------------------- */
@media screen and (min-width: 1024px) {
  .navbar,
  .navbar__ul,
  .header__container {
    display: flex;
  }
  .navbar {
    flex-direction: row;
    justify-content: space-between;
  }

  .navbar__ul {
    flex-direction: row;
  }

  .navbar__ul li {
    padding: 40px 15px 15px 0px;
  }

  .navbar__ul .link {
    margin: 0;
  }

  .header__container {
    padding-top: 10rem;
    padding-bottom: 18rem;
    flex-direction: row-reverse;
    margin-bottom: 15px;
    align-items: center;
    justify-content: center;
  }

  .header__container img {
    max-width: 330px;
  }

  .header__text {
    padding-left: 5rem; /* separation between image and about me text*/
  }

  /* Portfolio section------------------------- */
  .portfolio__container {
    flex-direction: row;
    align-items: center;
    flex-wrap: wrap;
    width: 100%;
    max-width: 1165px;
  }

  .card {
    max-width: 100%;
  }

  .card img {
    margin-bottom: 1rem;
  }

  .card p {
    font-weight: 200;
  }
}
  /* End Portfolo------------------------------ */






















/* Dark mode------------------------------- */
button[class="darkmode"] {
  cursor: pointer;
  background-color: white;
  border: transparent;
}

.darkmode .portfolio {
  background-color: var(--clr-dark-black);
  color: var(--clr-dark-text);
}

.darkmode footer {
  background-color: var(--clr-dark-black);
  color: var(--clr-dark-text);
}

.darkmode .header__container img {
  box-shadow: rgba(255, 255, 255, 1) 0px 2px 15px 0px,
  rgba(255, 255, 255, 0.4) 0px 2px 5px 0px;
}

.darkmode .card {
  box-shadow: rgba(255, 255, 255, 0.5) 0px 2px 15px 0px,
  rgba(255, 255, 255, 0.4) 0px 2px 5px 0px;
}

.darkmode .skills__item img {
  background-color: white;
  border: 15px solid white;
  border-radius: 25%;
}

.darkmode .footer__item img {
  background-color: white;
  border: 2px solid white;
  border-radius: 50%;
}
/* ... */

